Fixed invali z-index.

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -118,6 +118,7 @@ main {
 	width: 70%;
 	display: flex;
 	align-items: center;
+	z-index: -1;
 
 	img {
 		display: block;
